src/tests/snapshots/cargo_vet__tests__vet__simple-policy-first-extra-partially-missing.snap
---
source: src/tests/vet.rs
expression: human
---
Vetting Failed!

2 unvetted dependencies:
  third-party1:10.0.0 missing ["fuzzed"]
  transitive-third-party1:10.0.0 missing ["fuzzed"]

recommended audits for fuzzed:
    Command                                           Publisher  Used By       Audit Size
    cargo vet inspect third-party1 10.0.0             UNKNOWN    first-party   100 lines
    cargo vet inspect transitive-third-party1 10.0.0  UNKNOWN    third-party1  100 lines

estimated audit backlog: 200 lines

Use |cargo vet certify| to record the audits.

