src/tests/snapshots/cargo_vet__tests__vet__simple-policy-first-too-strong.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "certify_web_gui_data": null,
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "missing_criteria": [
        "strong-reviewed"
      ],
      "name": "third-party1",
      "version": "10.0.0"
    },
    {
      "missing_criteria": [
        "strong-reviewed"
      ],
      "name": "third-party2",
      "version": "10.0.0"
    }
  ],
  "suggest": {
    "suggest_by_criteria": {
      "strong-reviewed": [
        {
          "name": "third-party1",
          "notable_parents": "first-party",
          "suggested_criteria": [
            "strong-reviewed"
          ],
          "suggested_diff": {
            "diffstat": {
              "count": 100,
              "raw": "+100"
            },
            "from": null,
            "to": "10.0.0"
          }
        },
        {
          "name": "third-party2",
          "notable_parents": "first-party",
          "suggested_criteria": [
            "strong-reviewed"
          ],
          "suggested_diff": {
            "diffstat": {
              "count": 100,
              "raw": "+100"
            },
            "from": null,
            "to": "10.0.0"
          }
        }
      ]
    },
    "suggestions": [
      {
        "name": "third-party1",
        "notable_parents": "first-party",
        "suggested_criteria": [
          "strong-reviewed"
        ],
        "suggested_diff": {
          "diffstat": {
            "count": 100,
            "raw": "+100"
          },
          "from": null,
          "to": "10.0.0"
        }
      },
      {
        "name": "third-party2",
        "notable_parents": "first-party",
        "suggested_criteria": [
          "strong-reviewed"
        ],
        "suggested_diff": {
          "diffstat": {
            "count": 100,
            "raw": "+100"
          },
          "from": null,
          "to": "10.0.0"
        }
      }
    ],
    "total_lines": 200
  }
}
