src/tests/snapshots/cargo_vet__tests__vet__simple-policy-root-dep-too-strong.snap
---
source: src/tests/vet.rs
expression: human
---
Vetting Failed!

3 unvetted dependencies:
  third-party1:10.0.0 missing ["strong-reviewed"]
  third-party2:10.0.0 missing ["strong-reviewed"]
  transitive-third-party1:10.0.0 missing ["strong-reviewed"]

recommended audits for strong-reviewed:
    Command                                           Publisher  Used By       Audit Size
    cargo vet inspect third-party1 10.0.0             UNKNOWN    first-party   100 lines
    cargo vet inspect third-party2 10.0.0             UNKNOWN    first-party   100 lines
    cargo vet inspect transitive-third-party1 10.0.0  UNKNOWN    third-party1  100 lines

estimated audit backlog: 300 lines

Use |cargo vet certify| to record the audits.

