src/tests/snapshots/cargo_vet__tests__vet__simple-policy-root-too-strong.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "third-party1",
      "version": "10.0.0",
      "missing_criteria": [
        "strong-reviewed"
      ]
    },
    {
      "name": "third-party2",
      "version": "10.0.0",
      "missing_criteria": [
        "strong-reviewed"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "third-party1",
        "notable_parents": "first-party",
        "suggested_criteria": [
          "strong-reviewed"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "insertions": 100,
            "deletions": 0,
            "files_changed": 1
          }
        },
        "confident": true
      },
      {
        "name": "third-party2",
        "notable_parents": "first-party",
        "suggested_criteria": [
          "strong-reviewed"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "insertions": 100,
            "deletions": 0,
            "files_changed": 1
          }
        },
        "confident": true
      }
    ],
    "suggest_by_criteria": {
      "strong-reviewed": [
        {
          "name": "third-party1",
          "notable_parents": "first-party",
          "suggested_criteria": [
            "strong-reviewed"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "insertions": 100,
              "deletions": 0,
              "files_changed": 1
            }
          },
          "confident": true
        },
        {
          "name": "third-party2",
          "notable_parents": "first-party",
          "suggested_criteria": [
            "strong-reviewed"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "insertions": 100,
              "deletions": 0,
              "files_changed": 1
            }
          },
          "confident": true
        }
      ]
    },
    "total_lines": 200
  }
}
